[package]
name = "event-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1", features = ["full"] }
csv = "1.1"
alloy = { version = "0.1", features = ["full"] }
chrono = "0.4"
num-bigint = "0.4"